# AeonForge

./: .coveragerc  .env.template  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  Dockerfile.ci  Makefile  ONE_PAGER.md  PULL_REQUEST_TEMPLATE.md  PYPROJECT_EXTRAS_SNIPPET.toml  README-CI-PACK.md  README-GHA-PIPELINE.md  README.md  README_ADDON.md  README_BADGES.md  README_CI_BADGES.md  ROADMAP.md  WHITEPAPER.md  conftest.py  docker-compose.ci.yml  docker-compose.integration.yml  docker-compose.test.yml  docker-compose.yml  install.sh  mypy.ini  pyproject.toml  pyproject.toml.backup  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements.txt  run.py  setup.cfg  sitecustomize.py  tox.ini
agi_core/: __init__.py
alembic/: env.py  script.py.mako
app/: bot_handlers.py  config.py  db.py  github_verifier.py  main.py  models.py  monitoring.py  quality.py  reputation.py  schemas.py  task_spec.py  tasks.py  utils.py
configs/: coverage-ci.rc  default.yaml  experiments.yaml  human_loop.yaml  mycelium.yaml  otel-collector-config.yaml  release.yaml
core/: biometric_engine.py  pomdp_planner.py
deploy/: Dockerfile
docker/: nginx.conf
docs/: API.md  CBC_Omega2.md  CBC_Omega2_LITE.md  CBC_Omega2_NeuroCrowd_Architecture_UA.md  CBC_Omega2_Spec.md  CBC_Omega2_Traceability.md  CBC_Omega2_Validation.md  CI.md  Causal_World_Model.md  METAWORLD_INTEGRATION.md  MultiAgent_Orchestration.md  NEUROCROWD.md  QUICKSTART.md  WANDB.md  architecture.mmd  diploma_appendix.md  quick_start.ipynb
infrastructure/: api.py  metrics.py  secret_manager.py  security.py  (+1 more)
(+138 files in other folders)
